--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         
     dark:rounded-none dark:shadow-white dark:border-2 dark:border-[#373737] dark:bg-[#2d2d2d]">
       <p class="">
-        Latest Shots
+        Latest works
       </p>
       <i class='bx bx-right-top-arrow-circle bx-spin text-[15px] ' ></i>
     </div>
